# the-last-bit-rsol

./: .gitignore  README.md  do.md
amm_docs/: amount_out.md  progress.md
scripts/: clean.sh
zeroescrow-add-swap/: Cargo.toml
zeroescrow-add-swap/src/: main.rs
zerox01xnftstaking/: Anchor.toml  README.md
zerox01xnftstaking/programs/zerox01xnftstaking/: Cargo.toml
zerox01xnftstaking/programs/zerox01xnftstaking/src/: constants.rs  error.rs  lib.rs  state.rs
zerox01xnftstaking/programs/zerox01xnftstaking/src/instructions/: initialize.rs
zeroxamm-introspection/: Anchor.toml  README.md
zeroxamm-introspection/docs/: ARCHITECTURE.md  context.md
zeroxamm-introspection/programs/zeroxamm-introspection/: Cargo.toml
zeroxamm-introspection/programs/zeroxamm-introspection/src/: error.rs  instructions.rs  lib.rs  state.rs
zeroxamm-introspection/programs/zeroxamm-introspection/src/instructions/: add_liquidity.rs  burn_for_swap.rs  initialize_pool.rs  swap_payout.rs
zeroxamm-introspection/programs/zeroxamm-introspection/src/utils/: introspection.rs
zeroxamm-introspection/programs/zeroxamm-introspection/tests/: test_amm.rs
zeroxamm-introspection/scripts/: test.sh
zeroxamm-math/: Cargo.toml
zeroxamm-math/src/: lib.rs
zeroxamm-one/: Anchor.toml  README.md
zeroxamm-one/programs/zeroxamm-one/: Cargo.toml
zeroxamm-one/programs/zeroxamm-one/src/: error.rs  instructions.rs  lib.rs  state.rs
zeroxamm-one/programs/zeroxamm-one/src/instructions/: add_liquidity.rs  initialize_pool.rs  swap.rs
zeroxamm-one/programs/zeroxamm-one/tests/: test_amm.rs
zeroxcounter/: Anchor.toml  package.json
zeroxcounter/programs/zeroxcounter/: Cargo.toml
zeroxcounter/programs/zeroxcounter/src/: instructions.rs  lib.rs  state.rs
zeroxcounter/programs/zeroxcounter/src/instructions/: increment.rs  initialize.rs
zeroxcounter/programs/zeroxcounter/tests/: zeroxcounter.ts
zeroxescrow/: Cargo.toml
zeroxescrow-o1/: Anchor.toml
zeroxescrow-o1/programs/zeroxescrow-o1/: Cargo.toml
zeroxescrow-o1/programs/zeroxescrow-o1/src/: instructions.rs  lib.rs  state.rs
zeroxescrow-o1/programs/zeroxescrow-o1/src/instructions/: increment.rs  initialize.rs
zeroxescrow-o1/programs/zeroxescrow-o1/tests/: test_initialize.rs
zeroxescrow/src/: main.rs
zeroxnft-marketplace/: Anchor.toml  README.md
zeroxnft-marketplace/programs/zeroxnft-marketplace/: Cargo.toml
zeroxnft-marketplace/programs/zeroxnft-marketplace/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs  utils.rs
zeroxnft-marketplace/programs/zeroxnft-marketplace/src/instructions/: accept_offer.rs  buy.rs  buy_with_token.rs  cancel_offer.rs  delist.rs  initialize_marketplace.rs  list.rs  make_offer.rs
zeroxnft-marketplace/programs/zeroxnft-marketplace/tests/: test_marketplace.rs
zeroxnft-marketplace/scripts/: test.sh
zeroxnft-marketplace/tests/: zeroxnft-marketplace.ts
zeroxnft-staking/: Anchor.toml  README.md  nftRAQv9Xi2VP2AS5Y5JHXxa92MYJqVve7EWVZEx7Tw.json  package.json
zeroxnft-staking/programs/zeroxnft-staking/: Cargo.toml
zeroxnft-staking/programs/zeroxnft-staking/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs  utils.rs
zeroxnft-staking/programs/zeroxnft-staking/src/instructions/: bootstrap_collection.rs  claim_rewards.rs  initialize.rs  stake.rs  unstake.rs
zeroxnft-staking/programs/zeroxnft-staking/tests/: test_staking.rs
zeroxnft-staking/scripts/: test.sh
zeroxpda-calculator/: Anchor.toml
zeroxpda-calculator/programs/zeroxpda-calculator/: Cargo.toml
zeroxpda-calculator/programs/zeroxpda-calculator/src/: lib.rs
zeroxpda-calculator/programs/zeroxpda-calculator/src/instructions/: initialize.rs
zeroxpda-calculator/programs/zeroxpda-calculator/tests/: test_initialize.rs
