[package]
name = "zeroxamm-introspection"
version = "0.1.0"
description = "AMM with instruction introspection for swap payout"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zeroxamm_introspection"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["idl-build"] }

[dev-dependencies]
anchor-spl = { version = "0.31.1", features = ["idl-build"] }
five8_core = { version = "0.1.2", features = ["std"] }
litesvm = "0.10.0"
solana-account = "3.3.0"
solana-address = "2.6.0"
solana-instruction = "3.4.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
