[package]
name = "zeroxnft-marketplace"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zeroxnft_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["idl-build"] }
mpl-core = { version = "0.11.1", default-features = false, features = ["anchor"] }

[dev-dependencies]
anchor-spl = { version = "0.31.1", features = ["idl-build"] }
five8_core = { version = "0.1.2", features = ["std"] }
litesvm = "0.10.0"
mpl-core = { version = "0.11.1", default-features = false, features = ["anchor"] }
solana-account = "3.3.0"
solana-clock = "3.0.0"
solana-address = "2.6.0"
solana-instruction = "3.4.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"

